clusters/development/argo-rollouts-demo-fe/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-rollouts-demo-fe
  namespace: demo
  labels:
    app: argo-rollouts-demo-fe
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: argo-rollouts-demo-fe
  template:
    metadata:
      labels:
        app: argo-rollouts-demo-fe
    spec:
      containers:
        - name: argo-rollouts-demo-fe
          image: playgroundacr1234.azurecr.io/argo-rollouts-demo-fe:e4d5ead244001fc50fc4eb31ea9e938784c415c3
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
